--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <body>
 
     <div id="mainDrawing"></div>
+    <div id="info">
+      fly with WASD/RF/QE<br>
+      press H to hide control
+    </div>
     <script src="./js/multi_view_post.js" type="module"></script>
     <!-- <script src="./js/multi_view_cam_array.js" type="module"></script> -->
 </body>
