--- a/index.html
+++ b/index.html
@@ -8,20 +8,41 @@
   <script src="js/Detector.js"></script>
 </head>
 <style>
-  body { margin: 0; }
-  canvas { width: 100%; height: 100% }
+  body {
+    margin: 0;
+  }
+
+  canvas {
+    width: 100%;
+    height: 100%
+  }
 </style>
 
 <body>
 
-    <div id="mainDrawing"></div>
-    <div id="info">
-      fly with WASD/RF/QE<br>
-      press H to hide control
-    </div>
-    <script src="./js/multi_view_post.js" type="module"></script>
-    <!-- <script src="./js/multi_view_cam_array.js" type="module"></script> -->
+  <div id="mainDrawing"></div>
+  <div id="info">
+    fly with WASD/RF/QE<br>
+    press H to hide control
+  </div>
+  <script src="./js/multi_view_post.js" type="module"></script>
+  <script>
+    document.addEventListener('drop', (e) => {
+      e.preventDefault();
+      e.stopPropagation();
+
+      for (const f of e.dataTransfer.files) {
+        console.log('File(s) you dragged here: ', f.path)
+      }
+    });
+    document.addEventListener('dragover', (e) => {
+      e.preventDefault();
+      e.stopPropagation();
+    });
+  </script>
+  <!-- <script src="./js/multi_view_cam_array.js" type="module"></script> -->
 </body>
 <!-- <script src="js/test.js" type="text/javascript"></script> -->
 <!-- <script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script> -->
+
 </html>
